goosepaper/static/css/goosepaper.css
h1 {
    letter-spacing: -1px;
    font-weight: bold;
}
h2 a span {
    display: none;
}
h2 a, span {
    margin-right: 10px;
}
h1 a:hover,
h2 a:hover,
h3 a:hover,
h4 a:hover {
    text-decoration: none;
}
h4,
h4 a {
    color: #666;
}
h4 a:hover {
    color: #333;
}
#articlebox {
    display: none;
}
.right {
    text-align: right;
}
hr {
    padding: 0;
    margin: 0;
}
.options a {
    margin-right: 10px;
    text-decoration: none;
}
.delete {
    color: #999;
}
.delete:hover {
    color: #666;
}
.favorite {
    cursor: pointer;
}
.unloved {
    color: #999;
}
.loved {
    color: #FF3300!important;
}
time {
    color: #999;
    margin-right: 10px;
}
#infscr-loading {
    margin: 20px auto;
    text-align: center;
}
.folded {
    display: none;
}
footer {
    padding: 40px 0;
}
.folded-icon {
    color: #FF3300;
}

